<resources>
    <string name="app_name">Мозг</string>
    <string name="newgame">Новая игра</string>
    <string name="contgame">Продолжить</string>
    <string name="rules">Правила</string>
    <string name="records">Рекорды</string>
    <string name="name">Имя мозга</string>
    <string name="days">Дни жизни</string>
    <string name="type">Выберите тип мозга\nДля просмотра характеристик коснитесь изображения</string>
    <string name="start">Начать</string>
    <string name="hint1">Введите имя мозга</string>
    <string name="Return">Вернуться в меню</string>
    <string name="RulesHello">
        <b>Привет! Ты попал в игру мозг-викторина-тамагочи!</b>\n\n</string>
    <string name="Rules1">
         Для начала придумай имя своему мозгу и выбери его тип.\n
         Если ты просто хочешь блеснуть своими познаниями в технических и гуманитарных науках, выбирай нормальный мозг.\n
         Если же ты гик (уважение разработчиков!), смело выбирай соответствующий тип.\n
    Теперь время играть!\n\n</string>
    <string name = "Rules2">
         Мы не зря учили в школе биологию, поэтому знаем, что у человеческого мозга есть два полушария.\n
         Левое полушарие отвечает за аналитическое мышление, поэтому для него мы подготовили задачки на счет и логику.\n
         Правому же ближе творчество, воображение и все подобное. Оно поможет тебе ответить на вопросы о культуре, истории и литературе!\n
         Выбирай, на вопрос для какого полушария ты хочешь ответить, и нажимай соответствующую кнопку.\n\n</string>
    <string name="Rules3">
         Познакомимся поближе с характеристиками и потребностями нашего мозга.\n
         Как ты, наверное, уже догадалcя, питается он знаниями, поэтому правильные ответы на вопросы увеличивают развитие полушарий.\n
         Однако не бросайся отвечать на десятки вопросов за раз: помни, что каджый ответ отнимает у мозга энергию.\n
         Не стоит и непредусмотрительно отвечать, не подумав: за неправильный выбор мозг теряет жизнь.\n
         Если тебе кажется, что энергии слишком много, а вот жизней осталось маловато, нажми на кнопку увеличения HP и обменяй первое на второе.\n
         Мозг не перестает функционировать даже когда ты выходишь из игры, так что навещай его почаще, чтобы отслеживать изменения.\n\n
    </string>
    <string name="Rules4">
        Естественно, эта игра не вечная. Когда какие-либо парамеры упадут до нуля, настанет время концовки.\n
         Постарайся оттянуть этот момент как можно дольше, даже если тебе интересно посмотреть, как именно все закончится.\n
        Пожалей мозг, заботься о нем, хорошо?\n\n</string>
    <string name="Rules5">
         Ты можешь соревноваться сам с собой: сколько же мозг проживет на этот раз?\n
        Чтобы отследить свои результаты, заходи в раздел "Рекорды".\n\n</string>
    <string name="RulesBye">
         <b>Приятной игры!</b>
    </string>
</resources>
