<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lback"
    tools:context=".rules">

    <TextView
        android:id="@+id/textView"
        android:layout_width="235dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/rules"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/rulesback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/rulesback"
        android:layout_width="214dp"
        android:layout_height="43dp"
        android:layout_marginBottom="4dp"
        android:onClick="RHomeClick"
        android:text="@string/Return"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="355dp"
        android:layout_height="342dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="116dp"
        app:layout_constraintBottom_toBottomOf="@+id/rulesback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="144dp"
                        android:text="@string/Rules1"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/background_dark"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="174dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/happy1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rules2"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/background_dark"
                        android:textSize="14sp" />
                    <ImageView
                        android:layout_width="174dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/hemi" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rules3"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/background_dark"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rules4"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/background_dark"
                        android:textSize="14sp" />
                    <ImageView
                        android:layout_width="174dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/ripp" />

                </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rules5"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
                <ImageView
                    android:layout_width="174dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:background="@drawable/cup" />
            </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/RulesHello"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tabHost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.859" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="166dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/RulesBye"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/rulesback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabHost"
        app:layout_constraintVertical_bias="0.054" />

</android.support.constraint.ConstraintLayout>